Güncel hali commitlendi

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Günlük Motivasyon</title> 
     <link rel="stylesheet" href="style.css"> 
 </head>
-<body> Sayfanın tüm görünür içeriği
+<body> 
     <div class="container">
         <button id="theme-toggle">🌙 Temayı Değiştir ☀️</button> 
         
